# xorion-main

./: Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  rustfmt.toml  verifier_key.hex  verifier_key01.hex  xorion-spec.json
.github/workflows/: ci.yml  scorecard.yml
audits/: README.md
bnb_bridge/: Cargo.toml  lib.rs
bridge-contracts/: hardhat.config.js  package.json
bridge-contracts/contracts/: Bridge.sol  XorionIDO.sol
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/airdrop/: Cargo.toml
pallets/airdrop/rpc/: Cargo.toml
pallets/airdrop/rpc/api/: Cargo.toml
pallets/airdrop/rpc/api/src/: lib.rs
pallets/airdrop/rpc/src/: lib.rs
pallets/airdrop/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/launch-claim/: Cargo.toml
pallets/launch-claim/src/: lib.rs  mock.rs  tests.rs
pallets/pallet-bridge/: Cargo.toml  README.md
pallets/pallet-bridge/src/: lib.rs  mock.rs  tests.rs
pallets/private-transactions/: Cargo.toml  README.md
pallets/private-transactions/src/: lib.rs  mock.rs  tests.rs
pallets/template/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  bag_thresholds.rs  genesis_config_presets.rs  governance.rs  helper.rs  lib.rs
runtime/src/configs/: check_nonce.rs  mod.rs  precompiles.rs
xor-account/: Cargo.toml
xor-account/src/: dev_accounts.rs  lib.rs
