[package]
name = "bnb_bridge"
version = "0.1.0"
authors = ["Kofi Otuo <otuokofi@outlook.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.2", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.2" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
