[package]
name = "xor-account"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
crystals-dilithium = { git = "https://github.com/Kofituo/dilithium.git", default-features = false }
log = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
bs58 = { version = "0.5.1", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }

# Substrate
sp-core = { workspace = true, features = ["serde"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true }