[package]
name = "pallet-launch-claim"
version = "0.1.0"
description = "A pallet for to claim xor from launch"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }

# Substrate FRAME Dependencies
frame-support.workspace = true
frame-system.workspace = true

# Substrate Primitives
sp-core.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-io.workspace = true
pallet-balances.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "pallet-balances/std",
]