[package]
name = "pallet-airdrop-rpc-api"
version = "0.1.0"
edition = "2021"
description = "RPC methods for the airdrop pallet"
authors = ["Kofi Otuo <otuokofi@outlook.com>"]
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-api/std"
]